--- a/codes/CMakeLists.txt
+++ b/codes/CMakeLists.txt
@@ -1,5 +1,3 @@
-
-
 add_executable(make_socket make_socket.c)
 
 add_executable(tcp_server tcp_server.c)
@@ -11,14 +9,11 @@ add_executable(udp_client udp_client.c)
 add_executable(local_tcp_server local_tcp_server.c)
 add_executable(local_tcp_client local_tcp_client.c)
 
-
 add_executable(local_udp_server local_udp_server.c)
 add_executable(local_udp_client local_udp_client.c)
 
-
 add_executable(grace_server grace_server.c)
 add_executable(grace_client grace_client.c)
-
 
 add_executable(ping_server ping_server.c)
 add_executable(ping_client ping_client.c)
@@ -32,7 +27,11 @@ add_executable(udp_connect_srv udp_connect_srv.c)
 add_executable(addr_used addr_used.c)
 add_executable(addr_reuse addr_reuse.c)
 
-
 add_executable(stream_client stream_client.c)
 add_executable(stream_server stream_server.c)
 
+add_executable(reliable_client reliable_client.c)
+add_executable(reliable_server reliable_server.c)
+
+add_executable(reliable_cli reliable_cli.c)
+add_executable(reliable_sev reliable_sev.c)
