--- a/codes/CMakeLists.txt
+++ b/codes/CMakeLists.txt
@@ -39,3 +39,6 @@ add_executable(reliable_sev reliable_sev.c)
 add_executable(select_client select_client.c)
 
 add_executable(poll_server poll_server.c)
+
+add_executable(nonblocking_client nonblocking_client.c)
+add_executable(nonblocking_server nonblocking_server.c)
