--- a/codes/CMakeLists.txt
+++ b/codes/CMakeLists.txt
@@ -51,9 +51,11 @@ add_executable(epoll_server_level_trigger epoll_server_level_trigger.c)
 
 add_executable(multi_process_server multi_process_server.c)
 
-
 add_executable(multi_thread_server multi_thread_server.c)
 target_link_libraries(multi_thread_server -lpthread)
 
 add_executable(thread_pool_server thread_pool_server.c)
 target_link_libraries(thread_pool_server -lpthread)
+
+add_executable(reactor_server reactor_server.c)
+target_link_libraries(reactor_server -lpthread)
