--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "acceptor.h": "c",
         "common.h": "c",
         "tcp_server.h": "c",
-        "event_loop.h": "c"
+        "event_loop.h": "c",
+        "stdarg.h": "c"
     }
 }
