reactor with multi-threads

--- a/srcs/CMakeLists.txt
+++ b/srcs/CMakeLists.txt
@@ -66,3 +66,6 @@ include_directories(${PROJECT_SOURCE_DIR}/common)
 
 add_executable(reactor_single_thread_server reactor_single_thread_server.c)
 target_link_libraries(reactor_single_thread_server libcommon.a -lpthread)
+
+add_executable(reactor_multi_thread_server reactor_multi_thread_server.c)
+target_link_libraries(reactor_multi_thread_server libcommon.a -lpthread)
