--- a/docs/2_TCP 编程基础/srcs/CMakeLists.txt
+++ b/docs/2_TCP 编程基础/srcs/CMakeLists.txt
@@ -5,5 +5,6 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/build/bin)
 
 
-add_executable(byte_order byte_order.c)
-add_executable(np_trans np_trans.c)
+add_executable(network_info network_info.c)
+add_executable(tcp_client tcp_client.c)
+add_executable(tcp_server tcp_server.c)
