--- a/docs/3_本地套接字编程/srcs/CMakeLists.txt
+++ b/docs/3_本地套接字编程/srcs/CMakeLists.txt
@@ -8,5 +8,5 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/build/bin)
 add_executable(local_udp_client local_udp_client.c)
 add_executable(local_udp_server local_udp_server.c)
 
-# add_executable(local_tcp_client local_tcp_client.c)
-# add_executable(local_tcp_server local_tcp_server.c)
+add_executable(local_tcp_client local_tcp_client.c)
+add_executable(local_tcp_server local_tcp_server.c)
