--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,5 @@
 {
     "files.associations": {
-        "signal.h": "c",
-        "in.h": "c",
-        "errno.h": "c",
-        "channel.h": "c",
-        "acceptor.h": "c",
-        "common.h": "c",
-        "tcp_server.h": "c",
-        "event_loop.h": "c",
-        "stdarg.h": "c"
+        "cerrno": "c"
     }
 }
